fix: play video button position on IE11

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1014,10 +1014,11 @@ input {
 
 .video__play-button {
   cursor: pointer;
+  position: absolute;
+  left: calc( 50% - 42.5px);
+  top: calc( 50% - 42.5px);
   max-width: 85px;
   max-height: 85px;
-  position: relative;
-  margin: auto;
   border-radius: 50%;
   box-shadow: 0px 0px 20px rgba(255, 255, 255, 0);
   transition: box-shadow 0.5s; }
