--- a/src/sass/templates/_control.sass
+++ b/src/sass/templates/_control.sass
@@ -105,10 +105,11 @@
 .video
   &__play-button
     cursor: pointer
+    position: absolute
+    left: calc( 50% - 42.5px )
+    top: calc( 50% - 42.5px )
     max-width: 85px
     max-height: 85px
-    position: relative
-    margin: auto
     border-radius: 50%
     box-shadow: 0px 0px 20px  rgba($light, 0)
     transition: box-shadow 0.5s 
